package com.mvc.userservice.enums;

public enum KycDocumentType {
    CIN,
    Permis,
    Passport,
    Justificatif_de_domicile,
    Autre
}
