package com.mvc.userservice.enums;

public enum TypeTransaction {
    VIREMENT,
    RECHARGE,
    DEPOSIT,
    CRYPTO_SELL,
    CRYPTO_BUY
}
