package com.mvc.userservice.enums;

public enum VirementType {
    CLASSIC, Instantane
}
